# microface

./: .gitignore  Cargo.toml  README.md  TODOS.md  embedded_graphics_ecosystem.md  zip-source.sh
examples/: test_render.rs  test_render_display.rs  test_stacks.rs  test_text_element.rs  test_text_stacks.rs
microface-macros/: Cargo.toml
microface-macros/src/: lib.rs
src/: color.rs  element.rs  lib.rs
src/basis/: mod.rs
src/basis/foundation/: layout.rs  mod.rs  screen.rs
src/fonts/: mod.rs
src/render/: bitmap.rs  mod.rs
src/widgets/: mod.rs
src/widgets/layout/: canvas.rs  hstack.rs  mod.rs
src/widgets/layout/stack/: mod.rs  stack_direction.rs
src/widgets/primitives/: mod.rs  rect.rs
src/widgets/text/: label.rs  mod.rs  text.rs
tools/: font2bin.py
