[package]
name = "microface"
version = "0.1.0"
edition = "2024"
authors = ["kulrohit"]
description = "A simplified, hardware-agnostic interface for embedded graphics in Rust"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "graphics", "no-std", "display", "gui"]
categories = ["embedded", "no-std", "graphics"]
readme = "README.md"

[workspace]
members = [".", "microface-macros"]

[dependencies]
embedded-graphics-core = "0.4.1"
embedded-graphics = "0.8.2"
embedded-layout = "0.4.2"
embedded-text = "0.7.3"
microface-macros = { path = "microface-macros" }

[dev-dependencies]
embedded-graphics-simulator = "0.8.0"
chrono = "0.4.44"

[features]
default = ["color"]
std = []
bw = []
grayscale = []
color = []

