[package]
name = "microface"
version = "0.1.0"
edition = "2024"
authors = ["kulrohit"]
description = "A simplified, hardware-agnostic interface for embedded graphics in Rust"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "graphics", "no-std", "display", "gui"]
categories = ["embedded", "no-std", "graphics"]
readme = "README.md"

[workspace]
members = [".", "microface-macros"]

[dependencies]
embedded-graphics-core = "0.4.1"
embedded-graphics = "0.8.2"
embedded-layout = "0.4.2"
embedded-text = "0.7.3"
microface-macros = { path = "microface-macros" }

[dev-dependencies]
embedded-graphics-simulator = "0.8.0"
chrono = "0.4.44"

[features]
default = ["color"]
std = []
bw = []
grayscale = []
color = []

[[example]]
name = "test_render"
required-features = ["std"]

[[example]]
name = "test_stacks"
required-features = ["std"]

[[example]]
name = "test_text_stacks"
required-features = ["std"]

[[example]]
name = "test_text_element"
required-features = ["std"]

[profile.release]
opt-level = "z"        # optimize for size
lto = true             # link-time optimization — dead code elimination across crates
codegen-units = 1      # single codegen unit for maximum optimization
strip = true           # strip symbols and debug info from final binary
panic = "abort"        # no unwinding machinery — saves ~10-20 KB
